Actions
Bug #10649
closedsysmsg: NULL pointer errors
Start date:
2019-04-01
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../common/io/sysmsg.c: In function 'sysm_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/sysmsg.c:201:31: note: in expansion of macro 'NULL' SYS_SYSMIN, DDI_PSEUDO, NULL) == DDI_FAILURE || ^~~~ In file included from ../../common/io/sysmsg.c:61:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ In file included from ../../common/sys/param.h:48:0, from ../../common/io/sysmsg.c:39: ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/sysmsg.c:203:31: note: in expansion of macro 'NULL' SYS_MSGMIN, DDI_PSEUDO, NULL) == DDI_FAILURE) { ^~~~ In file included from ../../common/io/sysmsg.c:61:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ ../../common/io/sysmsg.c: In function 'sysmioctl': ../../common/io/sysmsg.c:594:15: error: comparison between pointer and integer [-Werror] if (infop[0] != NULL) { ^~ ../../common/io/sysmsg.c:616:18: error: comparison between pointer and integer [-Werror] if (infop[0] != NULL) ^~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 626869622a4eee3f87a6a261787ec8a4d4798724
commit 626869622a4eee3f87a6a261787ec8a4d4798724 Author: Toomas Soome <tsoome@me.com> Date: 2019-05-15T06:05:06.000Z 10649 sysmsg: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions